Alterado alerta para paragrafo

--- a/index.html
+++ b/index.html
@@ -13,12 +13,8 @@
         <input id="nome" type="text" onchange="helloWorld()">
     </p>
 
-    <script>
-        function helloWorld() {
-            var campoNome = document.getElementById('nome')
-            var nome = campoNome.value;
-            window.alert('Hello World, ' + nome + '!');
-        }
-    </script>
+    <p id = "mensagem"></p>
+    
+    <script src="script.js"></script>
 </body>
 </html>
